[v1.0] new design & active save

--- a/src/css/default.css
+++ b/src/css/default.css
@@ -1,13 +1,26 @@
 body {
-    min-width: 400px;
+    min-width: 440px;
     min-height: 400px;
-    background-color: #395984;
 }
-p {
-    color: #dee2e7;
-}
-textarea {
+.contents {
     width: 30em;
     line-height: 1.5;
     height: 25em;
+    padding: 0 5px;
+    border-radius: 4px;
+    border: none;
+    box-shadow: 0 0 0 1px #ccc inset;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+}
+
+.contents:focus {
+    outline: 0;
+    box-shadow: 0 0 0 2px rgb(33, 150, 243) inset;
+}
+
+p {
+    margin: -10px 0 0 15px;
+    color: #b56969;
 }
