--- a/src/css/default.css
+++ b/src/css/default.css
@@ -19,7 +19,107 @@ body {
     box-shadow: 0 0 0 2px rgb(33, 150, 243) inset;
 }
 
-p {
+.msg {
     margin: -10px 0 0 15px;
     color: #b56969;
+}
+
+.dli-zoom-in {
+    display: inline-block;
+    vertical-align: middle;
+    color: #333;
+    line-height: 1;
+    width: 0.7em;
+    height: 0.7em;
+    border: 0.1em solid currentColor;
+    border-radius: 50%;
+    box-sizing: content-box;
+    position: relative;
+    justify-content: flex-end;
+    float: right;
+    margin: 0 10px 15px 0;
+}
+
+.dli-zoom-in::before {
+    content: '';
+    position: absolute;
+    top: calc(85.35534% + 0.07071em);
+    left: calc(85.35534% + 0.07071em);
+    width: 0.336em;
+    height: 0.1em;
+    background: currentColor;
+    border-radius: 0 0.1em 0.1em 0;
+    transform: translateY(-50%) rotate(45deg);
+    transform-origin: left center;
+}
+
+.dli-zoom-in > span {
+    width: 58%;
+    height: 0.1em;
+    background: currentColor;
+    border-radius: 0.1em;
+    position: relative;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+}
+
+.dli-zoom-in > span::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: inherit;
+    border-radius: inherit;
+    transform: rotate(90deg);
+}
+
+.dli-zoom-out {
+    display: inline-block;
+    vertical-align: middle;
+    color: #333;
+    line-height: 1;
+    width: 0.7em;
+    height: 0.7em;
+    border: 0.1em solid currentColor;
+    border-radius: 50%;
+    box-sizing: content-box;
+    position: relative;
+    float: right;
+    margin: 0 10px 15px 0;
+}
+
+.dli-zoom-out::before {
+    content: '';
+    position: absolute;
+    top: calc(85.35534% + 0.07071em);
+    left: calc(85.35534% + 0.07071em);
+    width: 0.336em;
+    height: 0.1em;
+    background: currentColor;
+    border-radius: 0 0.1em 0.1em 0;
+    transform: translateY(-50%) rotate(45deg);
+    transform-origin: left center;
+}
+
+.dli-zoom-out > span {
+    width: 58%;
+    height: 0.1em;
+    background: currentColor;
+    border-radius: 0.1em;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+}
+
+.footer {
+    display: block;
 }
